--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <header>
         <a href="#" class="logo"><ion-icon name="cafe"></ion-icon>Coffee</a>
-        <nav class="nav">
+        <a><ion-icon name="grid" class='bx bx-menu' id="menu-icon"></ion-icon></a>
+        <nav class="nav navbar">
             <a href="#">Home</a>
             <a href="#">About</a>
             <a href="#">Menu</a>
@@ -55,5 +56,6 @@
         </div>
     </section>
     
+    <script src="script.js"></script>
 </body>
 </html>
